--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 .discord-link {
     display: inline-block;
     margin-top: 20px; /* Adjust the top margin as needed */
-    transform: translate(900px, -160px); /* 1st - Left, + Right. 2nd - Up, + Down */
+    transform: translate(870px, -160px); /* 1st - Left, + Right. 2nd - Up, + Down */
     position: relative;
 }
 .discord-button {
@@ -38,7 +38,7 @@ h1 {
 .CC-link {
     display: inline-block;
     margin-top: 20px; /* Adjust the top margin as needed */
-    transform: translate(140px, 50px); /* 1st - Left, + Right. 2nd - Up, + Down */
+    transform: translate(110px, 50px); /* 1st - Left, + Right. 2nd - Up, + Down */
     position: relative;
 }
 .CC-button {
@@ -47,14 +47,17 @@ h1 {
     margin-top: 20px; /* Adjust the top margin as needed */
     border-radius: 15px; /* Rounded corners */
 }
-.rounded-box {
-    width: 300px; /* Adjust the width as needed */
-    height: auto; /* DONT adjust the height */
-    background-color: #f0f0f0;
+.box-link {
+    display: inline-block;
+    margin-top: 20px; /* Adjust the top margin as needed */
+    transform: translate(-90px, -160px); /* 1st - Left, + Right. 2nd - Up, + Down */
+    position: relative;
+}
+.box-button {
+    width: 540px; /* Adjust the size as needed */
+    height: 155px; /* DONT adjust the height */
+    margin-top: 20px; /* Adjust the top margin as needed */
     border-radius: 15px; /* Rounded corners */
-    padding: 20px; 
-    margin: 20px auto; /* Center the box horizontally */
-    text-align: center; /* Center the text inside the box */
 }
 .underline {
     text-decoration: underline;
