--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 .discord-link {
     display: inline-block;
     margin-top: 20px; /* Adjust the top margin as needed */
-    transform: translate(870px, -160px); /* 1st - Left, + Right. 2nd - Up, + Down */
+    transform: translate(870px, -140px); /* 1st - Left, + Right. 2nd - Up, + Down */
     position: relative;
 }
 .discord-button {
@@ -38,24 +38,36 @@ h1 {
 .CC-link {
     display: inline-block;
     margin-top: 20px; /* Adjust the top margin as needed */
-    transform: translate(110px, 50px); /* 1st - Left, + Right. 2nd - Up, + Down */
+    transform: translate(110px, 70px); /* 1st - Left, + Right. 2nd - Up, + Down */
     position: relative;
 }
 .CC-button {
     width: 200px; /* Adjust the size as needed */
-    height: auto; /* DONT adjust the height */
+    height: 225px; /* DONT adjust the height */
     margin-top: 20px; /* Adjust the top margin as needed */
     border-radius: 15px; /* Rounded corners */
 }
 .box-link {
     display: inline-block;
     margin-top: 20px; /* Adjust the top margin as needed */
-    transform: translate(-90px, -160px); /* 1st - Left, + Right. 2nd - Up, + Down */
+    transform: translate(-90px, -140px); /* 1st - Left, + Right. 2nd - Up, + Down */
     position: relative;
 }
 .box-button {
     width: 540px; /* Adjust the size as needed */
     height: 155px; /* DONT adjust the height */
+    margin-top: 20px; /* Adjust the top margin as needed */
+    border-radius: 15px; /* Rounded corners */
+}
+.box2-link {
+    display: inline-block;
+    margin-top: 20px; /* Adjust the top margin as needed */
+    transform: translate(-410px, 70px); /* 1st - Left, + Right. 2nd - Up, + Down */
+    position: relative;
+}
+.box2-button {
+    width: 540px; /* Adjust the size as needed */
+    height: 225px; /* DONT adjust the height */
     margin-top: 20px; /* Adjust the top margin as needed */
     border-radius: 15px; /* Rounded corners */
 }
