--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ h1 {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     pointer-events: none;
 }
+.plugins-goBack {
+    transform: translate(0px, -140px);
+}
 .creators-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -167,6 +170,33 @@ h1 {
     color: #ffffff;
     font-size: 1.2em;
     font-weight: bold;
+}
+.topic-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2em;
+    width: 90%;
+    margin: 3em auto;
+    justify-content: center;
+    transform: translateX(-75px);
+}
+.topic-card{
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 1em;
+    border-radius: 0.5em;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+.topic-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 0.5em;
+}
+.topic-card-text{
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+    text-align: center;
 }
 .colour-box {
     display: flex;
