--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ h1 {
 }
 
 .store-page {
-    background-image: url('Images/Repeating_BG-Orange.png');
-    background-size: cover;
+    background-image: url('Images/bolck7.jpg');
+    background-size: 4em 4em;
     background-position: center;
     background-repeat: repeat;
 }
