--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ h1 {
 }
 
 .content-creators-page {
-    background-image: url('Images/Repeating_BG-Orange.png');
-    background-size: cover;
+    background-image: url('Images/bolck2.jpg');
+    background-size: 5em 5em;
     background-position: center;
     background-repeat: repeat;
 }
