--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 .content-creators-page {
-    background-image: url('Images/bolck2.jpg');
+    background-image: url('Images/bolck2.webp');
     background-size: 5em 5em;
     background-position: center;
     background-repeat: repeat;
